--- a/security.html
+++ b/security.html
@@ -93,7 +93,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEcRVLwS'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oa8mafwy&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nEcRVLwS'>Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -117,7 +117,7 @@ within AbbVie's enterprise-wide information security team, will be responsible f
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-IN-Crane-300-Highway-361/Embedded-System-Security-Analyst_R0063157'>Embedded System Security Analyst</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-IN-Crane-300-Highway-361/Embedded-System-Security-Analyst_R0063157'>Embedded System Security Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Embedded System Security Analyst. Key Role: Provide support in the 
 performance of research-related tasks, including data collection, manipulation 
@@ -170,7 +170,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -180,7 +180,7 @@ and?...</p>
 MITRE, you can have both. That's because MITRE people are committed to 
 tackling?...</p>
 <hr/>
-<h5><a href='https://capmo.join.com/jobs/271728-qa-and-security-engineer-m-f-d'>Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://capmo.join.com/jobs/271728-qa-and-security-engineer-m-f-d'>Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -259,7 +259,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -363,7 +363,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
