--- a/machine.html
+++ b/machine.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://rokk3r.workable.com/j/1701662182'>Rokk3r - Jobs: Machine Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rokk3r.workable.com/j/1701662182'>Rokk3r - Jobs: Machine Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -73,7 +73,7 @@ SmartNews, Inc.</p>
 <p>1 day ago ... ... as the most innovative company in Latin America and ranked no. 36 on Fast 
 Company' 50 Most Innovative Companies ranking. Our Data Scientist Chapter?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/2381671B43'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/2381671B43'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -185,7 +185,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -220,7 +220,7 @@ federal?...</p>
 <p>2019?7?10? ... Experience using TensorFlow, PyTorch, Chainer, Caffe, or other deep learning 
 frameworks; Experience with data analysis and development using the cloud?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1783179'>Job Application for Senior Machine Learning Engineer, ML ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... About the team: Video is 80% of today's global Internet traffic. The Engineering 
 team at Vimeo is building AI-driven tools to help anyone who wants to make a?...</p>
@@ -354,7 +354,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -425,7 +425,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1766303'>Job Application for Research Scientist (Machine Learning/Deep ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... You're a research scientist who has published in top tier conferences and are 
 passionate about having a positive impact on the world. You are enthusiastic?...</p>
@@ -444,7 +444,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -465,7 +465,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -473,7 +473,7 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
